--- a/.github/workflows/deployments.yml
+++ b/.github/workflows/deployments.yml
@@ -2,10 +2,10 @@ name: Deployments Production
 on:
   push:
     branches:
-      - master
+      - main
   pull_request:
     branches:
-      - master
+      - main
 jobs:
   testing:
     runs-on: ubuntu-latest
