--- a/.github/workflows/deployments.yml
+++ b/.github/workflows/deployments.yml
@@ -21,3 +21,30 @@ jobs:
         run: npm run lint
       - name: Build artifacts
         run: npm run build
+  deployment:
+    runs-on: ubuntu-latest
+
+    needs: testing
+    steps:
+    - uses: actions/checkout@v3
+    - name: Use Node.js 18.x
+      uses: actions/setup-node@v3
+      with:
+          node-version: 18.x
+    - name: Install dependencies
+      run: npm install
+    - name: Build
+      run: npm run lint
+    - name: Build artifacts
+      run: npm run build
+    - name: Deploy to Server
+      uses: easingthemes/ssh-deploy@main
+      env:
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_KEY }}
+          ARGS: "-rlgoDzvc -i --delete"
+          SOURCE: "dist/"
+          REMOTE_HOST: ${{ secrets.HOST }}
+          REMOTE_USER: ${{ secrets.USERNAME }}
+          TARGET: ${{ secrets.DIR }}
+          EXCLUDE: "/dist/, /node_modules/"
+
